Corrected spacing and support for colour changes

--- a/src/styles/hc-2018/splash.styl
+++ b/src/styles/hc-2018/splash.styl
@@ -18,6 +18,12 @@
     }
 }
 
+@media (max-width: 911pt) and (min-width: 596pt) {
+    #intro-social {
+        min-height: calc(var(--one) + var(--half));
+    }
+}
+
 @media (max-width: 595pt) {
     #splash-hack-cambridge-logo-object {
         max-width: 139pt;
